<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LeaveManagement</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="gooo">gooo</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="next_month">Next Month</string>
    <string name="previous_month">Previous Month</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>

</resources>